2021-09-08  Sihui Liu  <sihui_liu@apple.com>

        Regression (r282130): [ macOS iOS wk2 ] imported/w3c/web-platform-tests/storage/persisted.https.any.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=230053
        <rdar://problem/82879548>

        Reviewed by Chris Dumez.

        Clear storage states between tests so tests do not affect each other.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetStateToConsistentValues):
        (WTR::TestController::clearStorage):
        * WebKitTestRunner/TestController.h:

2021-09-08  Jonathan Bedard  <jbedard@apple.com>

        [webkitcorepy] Add support for find_spec
        https://bugs.webkit.org/show_bug.cgi?id=230009
        <rdar://problem/82827571>

        Reviewed by Dewei Zhu.

        * Scripts/libraries/webkitcorepy/setup.py: Bump version.
        * Scripts/libraries/webkitcorepy/webkitcorepy/__init__.py: Ditto.
        * Scripts/libraries/webkitcorepy/webkitcorepy/autoinstall.py:
        (AutoInstall.find_spec): Added.

2021-09-08  Fujii Hironori  <Hironori.Fujii@sony.com>

        [Win][DumpRenderTree] ASSERTION FAILED: openWindows().size() == 1 in runTest
        https://bugs.webkit.org/show_bug.cgi?id=229932

        Reviewed by Chris Dumez.

        runTest() called DestroyWindow while iterating 'openWindows'.
        However, DestroyWindow dispatches WM_DESTROY that removes the item
        from 'openWindows'.

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (runTest): Copy the vector to iterate.

2021-09-08  Simon Fraser  <simon.fraser@apple.com>

        Add a temporarily prefixed property for mask-mode, aliased to -webkit-mask-source-type
        https://bugs.webkit.org/show_bug.cgi?id=229915

        Reviewed by Antti Koivisto.
        
        Allow the "synonym" key in CSSProperties.json.

        * Scripts/webkitpy/style/checkers/jsonchecker.py:
        (JSONCSSPropertiesChecker.check_codegen_properties):
