@@ -666,12 +666,17 @@ class SimulatedDevice(object):
 
         with Timeout(timeout, handler=RuntimeError(u'Timed out waiting for process to open {} on {}'.format(bundle_id, self.udid)), patch=False):
             while True:
-                output = self.executive.run_command(
-                    ['xcrun', 'simctl', 'launch', self.udid, bundle_id] + args,
-                    env=environment_to_use,
-                    error_handler=_log_debug_error,
-                    return_stderr=False,
-                )
+                output = ''
+                try:
+                    output = self.executive.run_command(
+                        ['xcrun', 'simctl', 'launch', self.udid, bundle_id] + args,
+                        env=environment_to_use,
+                        error_handler=_log_debug_error,
+                        return_stderr=False,
+                    )
+                except OSError as e:
+                    _log.debug("simctl launch raised '{}'".format(e))
+                    continue
                 match = re.match(r'(?P<bundle>[^:]+): (?P<pid>\d+)\n', output)
                 # FIXME: We shouldn't need to check the PID <rdar://problem/31154075>.
                 if match and self.executive.check_running_pid(int(match.group('pid'))):
